--- a/_config.yml
+++ b/_config.yml
@@ -10,13 +10,13 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Femalecodertocat"
-resume_title:                   "Web Developer"
-resume_contact_email:           "services@github.com"
-resume_contact_telephone:       "1 (877) 448-4820"
-resume_contact_address:         "San Francisco, CA"
-resume_header_contact_info: "San Francisco, CA | 1 (877) 448-4820 | services@github.com"
-resume_header_intro: "<p>Professional Web Developer with an interest in Open Source and Education</p>"
+resume_name:                    "Skatetocat"
+resume_title:                   "Professional Skater"
+resume_contact_email:           "skatetocat@github.com"
+resume_contact_telephone:       "1-(877)-448-4820"
+resume_contact_address:         "San Francisco, California"
+resume_header_contact_info: "San Francisco, California | 1-(877)-448-4820 | skatetocat@github.com"
+resume_header_intro: "<p>Professional Skater, 'nuff said.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
